--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.password=seeker
 spring.datasource.url=jdbc:mysql://localhost:3306/webirpf
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+#Security
+security.user.password=teste
